# topo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.claude/: settings.json
.claude/hooks/: topo-hint.sh  topo-track.sh
.cursor/rules/: topo.md
.github/: copilot-instructions.md
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs  preset.rs
crates/atlas-cli/src/commands/: describe.rs  explain.rs  index.rs  mcp.rs  mod.rs  query.rs  quick.rs  render.rs
crates/atlas-core/src/: types.rs
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: builder.rs  store.rs
crates/atlas-score/src/: lib.rs  pagerank.rs  resolve.rs
crates/atlas-treesit/: Cargo.toml
crates/atlas-treesit/src/: lib.rs  queries.rs  regex_chunker.rs  ts_chunker.rs
crates/topo-cli/src/: main.rs
crates/topo-cli/src/commands/: describe.rs  gain.rs  init.rs  mcp.rs  mod.rs  query.rs
crates/topo-cli/templates/: AGENTS.md  copilot-instructions.md  cursor-topo.md  topo-context.sh
crates/topo-render/src/: compact.rs  lib.rs
crates/topo-scanner/src/: scanner.rs
crates/topo-treesit/src/: lib.rs  ts_chunker.rs
docs/: VISION.md
vhs/: hero.tape  query.tape  quick.tape  render.tape
