[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for Atlas codebase indexer"
repository.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core = { workspace = true }
atlas-scanner = { workspace = true }
atlas-index = { workspace = true }
atlas-score = { workspace = true }
atlas-render = { workspace = true }
atlas-treesit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
