[package]
name = "atlas-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deep index with rkyv zero-copy serialization"
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
atlas-scanner = { workspace = true }
atlas-score = { workspace = true }
atlas-treesit = { workspace = true }
rkyv = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
