[package]
name = "atlas-treesit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tree-sitter integration and grammar loading"
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
anyhow = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-haskell = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-r = { workspace = true }
